--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Shivanshu Chourasia",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.6.9"
